# hydra-somewhat-advanced

./: .gitignore  README.md  custom_types.py  main.py  pyproject.toml  utils.py
conf/: primary.yaml
conf/dataset/: adult_default.yaml  cmnist_no_pad.yaml  cmnist_with_pad.yaml
conf/model/: linear_svm.yaml  small_mlp.yaml  svm_default.yaml
