[tool.poetry]
name = "hydra-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = { git = "https://github.com/omry/omegaconf.git" }
hydra-core = { git = "https://github.com/facebookresearch/hydra.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
