[tool.poetry]
name = "hydra-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "^2.2"
hydra-core = "^1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[tool.mypy]
python_version = "3.8"
strict = true
disallow_any_generics = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
